Added relational fields, pg client now supports multiple join tables

--- a/notebooks/datamodels.ipynb
+++ b/notebooks/datamodels.ipynb
@@ -65,6 +65,7 @@
        "      <th>sideb</th>\n",
        "      <th>sidec</th>\n",
        "      <th>id</th>\n",
+       "      <th>group_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -74,12 +75,14 @@
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -88,16 +91,17 @@
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sidea  sideb  sidec  id\n",
-       "0    5.0    5.0    5.0 NaN\n",
-       "1   10.0    5.0    2.0 NaN\n",
-       "2    2.0    2.0    2.0 NaN"
+       "   sidea  sideb  sidec  id  group_id\n",
+       "0    5.0    5.0    5.0 NaN       NaN\n",
+       "1   10.0    5.0    2.0 NaN       NaN\n",
+       "2    2.0    2.0    2.0 NaN       NaN"
       ]
      },
      "execution_count": 3,
@@ -437,6 +441,256 @@
    ],
    "source": [
     "Triangle.objects().all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fetch related example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from hero_db_utils.datamodels import datamodel\n",
+    "from hero_db_utils.datamodels.fields import ForeignKeyField, AutoSerialField\n",
+    "import pandas as pd\n",
+    "import dotenv\n",
+    "dotenv.load_dotenv(override=True);\n",
+    "\n",
+    "@datamodel\n",
+    "class Store:\n",
+    "    manager_staff_id:ForeignKeyField(\"staff\", \"staff_id\")\n",
+    "    address_id:ForeignKeyField(\"address\",\"address_id\")\n",
+    "    last_update:pd.to_datetime\n",
+    "    store_id:AutoSerialField() = None\n",
+    "\n",
+    "@datamodel\n",
+    "class Address:\n",
+    "    address:str\n",
+    "    address2:str\n",
+    "    district:str\n",
+    "    city_id:ForeignKeyField(\"city\", \"city_id\")\n",
+    "    postal_code:str\n",
+    "    phone:str\n",
+    "    last_update:pd.to_datetime\n",
+    "    address_id:AutoSerialField() = None\n",
+    "\n",
+    "@datamodel\n",
+    "class City:\n",
+    "    city:str\n",
+    "    country_id:ForeignKeyField(\"country\", \"country_id\")\n",
+    "    last_update:str\n",
+    "    city_id:AutoSerialField() = None\n",
+    "\n",
+    "@datamodel\n",
+    "class Country:\n",
+    "    country:str\n",
+    "    last_update:pd.to_datetime\n",
+    "    country_id:AutoSerialField() = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: HERO_POSTGRES_DBNAME=dvd_rentals\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env HERO_POSTGRES_DBNAME=dvd_rentals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>manager_staff_id</th>\n",
+       "      <th>address_id</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-02-15 09:57:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006-02-15 09:57:12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_id  manager_staff_id  address_id         last_update\n",
+       "0         1                 1           1 2006-02-15 09:57:12\n",
+       "1         2                 2           2 2006-02-15 09:57:12"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Store.objects().all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join on related table for column \"address_id\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>manager_staff_id</th>\n",
+       "      <th>address_id</th>\n",
+       "      <th>last_update</th>\n",
+       "      <th>address_id</th>\n",
+       "      <th>address</th>\n",
+       "      <th>address2</th>\n",
+       "      <th>district</th>\n",
+       "      <th>city_id</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-02-15 09:57:12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47 MySakila Drive</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>300</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2006-02-15 09:45:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006-02-15 09:57:12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28 MySQL Boulevard</td>\n",
+       "      <td>None</td>\n",
+       "      <td>QLD</td>\n",
+       "      <td>576</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2006-02-15 09:45:30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_id  manager_staff_id  address_id         last_update  address_id  \\\n",
+       "0         1                 1           1 2006-02-15 09:57:12           1   \n",
+       "1         2                 2           2 2006-02-15 09:57:12           2   \n",
+       "\n",
+       "              address address2 district  city_id postal_code phone  \\\n",
+       "0   47 MySakila Drive     None  Alberta      300                     \n",
+       "1  28 MySQL Boulevard     None      QLD      576                     \n",
+       "\n",
+       "          last_update  \n",
+       "0 2006-02-15 09:45:30  \n",
+       "1 2006-02-15 09:45:30  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Store.objects().fetch_related(\"address_id\")"
    ]
   }
  ],
