--- a/notebooks/pg_client.ipynb
+++ b/notebooks/pg_client.ipynb
@@ -26,9 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: HERO_POSTGRES_DBNAME=dvd_rentals\n",
+      "env: HERO_POSTGRES_USERNAME=hero\n",
+      "env: HERO_POSTGRES_PASSWORD=hero@2020\n"
+     ]
+    }
+   ],
    "source": [
     "%env HERO_POSTGRES_DBNAME=dvd_rentals\n",
     "%env HERO_POSTGRES_USERNAME=hero\n",
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +87,7 @@
        "<PostgresDatabaseClient: 'dvd_rentals' DBClient>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +293,7 @@
        "21                       store      2      4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +455,7 @@
        "15           16       Travel 2006-02-15 09:46:27"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1137,7 @@
        "4  'african':1 'chef':11 'dentist':14 'documentari':7 'egg':2 'fast':5 'fast-pac':4 'forens':19 'gulf':23 'mexico':25 'must':16 'pace':6 'pastri':10 'psychologist':20 'pursu':17  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,6 +1154,120 @@
     "    join_on={QueryFunc.relation(\"film\",\"language_id\"):QueryFunc.relation(\"language\",\"language_id\")},\n",
     "    order_by=[\"film_id\"],\n",
     "    limit=5\n",
+    ")\n",
+    "# Print sql query:\n",
+    "print(client.parse_query(query))\n",
+    "# Execute the query:\n",
+    "client.read_query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join multiple tables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT \"store\".\"store_id\",\"country\".\"country\",\"city\".\"city\",\"address\".\"district\",\"address\".\"address\",\"address\".\"postal_code\" FROM \"store\" INNER JOIN \"address\" ON (\"store\".\"address_id\" = \"address\".\"address_id\") INNER JOIN \"city\" ON (\"address\".\"city_id\" = \"city\".\"city_id\") INNER JOIN \"country\" ON (\"city\".\"country_id\" = \"country\".\"country_id\") ORDER BY \"store_id\" ASC\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>district</th>\n",
+       "      <th>address</th>\n",
+       "      <th>postal_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Lethbridge</td>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>47 MySakila Drive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Woodridge</td>\n",
+       "      <td>QLD</td>\n",
+       "      <td>28 MySQL Boulevard</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_id    country        city district             address postal_code\n",
+       "0         1     Canada  Lethbridge  Alberta   47 MySakila Drive            \n",
+       "1         2  Australia   Woodridge      QLD  28 MySQL Boulevard            "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Join multiple tables to get the full address of stores:\n",
+    "query = client.build_query(\n",
+    "    \"store\",\n",
+    "    projection=[\n",
+    "        QueryFunc.relation(\"store\",\"store_id\"),\n",
+    "        QueryFunc.relation(\"country\",\"country\"),\n",
+    "        QueryFunc.relation(\"city\",\"city\"),\n",
+    "        QueryFunc.relation(\"address\",\"district\"),\n",
+    "        QueryFunc.relation(\"address\",\"address\"),\n",
+    "        QueryFunc.relation(\"address\",\"postal_code\"),\n",
+    "    ],\n",
+    "    join_table=[\"address\",\"city\",\"country\"],\n",
+    "    join_on=[\n",
+    "        {\n",
+    "            QueryFunc.relation(\"store\",\"address_id\"):QueryFunc.relation(\"address\",\"address_id\")\n",
+    "        },\n",
+    "        {\n",
+    "            QueryFunc.relation(\"address\",\"city_id\"):QueryFunc.relation(\"city\",\"city_id\")\n",
+    "        },\n",
+    "        {\n",
+    "            QueryFunc.relation(\"city\",\"country_id\"):QueryFunc.relation(\"country\",\"country_id\")\n",
+    "        }\n",
+    "    ],\n",
+    "    order_by=[\"store_id\"],\n",
     ")\n",
     "# Print sql query:\n",
     "print(client.parse_query(query))\n",
@@ -1946,7 +2070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   },
   "orig_nbformat": 2
  },
